--- a/Quiron.LojaVirtual.UnitTest/Quiron.LojaVirtual.UnitTest.csproj
+++ b/Quiron.LojaVirtual.UnitTest/Quiron.LojaVirtual.UnitTest.csproj
@@ -78,6 +78,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="TesteCarrinhoCompras.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
